
May 19 2007 V3.1.9.1 (3.2-pre1)
	Revised all code for POP3 operations and moved it into the account
	class. Now the refresh and delete operations of every account run
	simultaneously and it doesn't crash at Quit anymore.

	Dropped the menu item Clear and Forced Refresh because they are
	dispensable now. The mail list is cleared at every refresh.

	Removed the complain action.

	The view of complete messages was improved. It decodes the quoted
	printable encoding (like "=25" ). But it is not perfect yet.

	The configure script is looking for the mimelib headers "mimepp.h"
	and "datetime.h" now. If they are not installed, the user will be shown a
	invitation to install the kdepim devel package.

	Revised the makefile.am files to avoid some warnings

	Replaced the admin folder

Jul 06 2007 V3.2.0
	New setup dialog

	A configurable tool bar

	An easier code to build the GUI

	The warnings that kshowmail couldn't connect to the server during refresh,
	if there is no network connection available, can be disabled now.

	You can use KWallet to store the passwords.

Jul 14 2007 V3.2.1
	Fixed bug where if you configure 2 accounts, retrieve mail, and then deactivate
	one of the accounts, it's number of messages still reflects in the tray icon.

	Fixed sort of message number and size columns in message list to be numerical
	rather than alpha.

Aug 04 2007 V3.2.9 (3.3-pre1)
	Add support for SSL/TLS

Apr 20 2008 V3.3.0
	Revised filter (dialog and worker)
	  * White- and Blacklist
	  * indefinite number of filters
	  * moving of mails into mailboxes
	  * ignoring of mails (e.g. for mailing lists)
	Spam check with SpamAssassin (just basically)
	Revised filter log

Jul 05 2010 v4.0
  First release for KDE 4

Jul 27 2010 v4.0.1
  Bug fixed: KShowmail has chrashed when it has deleted mails.

v.4.1
  dutch translation
  reply function in show mail dialog
  log shows manually deleted mails
  in the mail view a tooltip shows the filter which has catched the mail