@@ -8,4 +8,5 @@ install( FILES accountActive.png
                newMailPic.png
                deletedFilter.png
                deletedManual.png
+               senderOnWhitelist.png
                DESTINATION ${DATA_INSTALL_DIR}/kshowmail/pics )
