@@ -72,6 +72,13 @@ class SenderListFilter{
      */
     void print();
 
+    /**
+     * Checks wheter <em>sender</em> is on the whitelist
+     * @param sender the sender to check
+     * @return TRUE - sender is listed on the whitelist
+     */
+    bool isOnWhitelist( const QString& sender ) const;
+
   private:
 
     /**
